kubernasty/manifests/crust/openldap/ingresses/ldap-account-manager.https.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldap-account-manager-in
  namespace: openldap
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-issuer-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-clusteradmin-auth-mw@kubernetescrd

spec:
  rules:
  - host: accounts.kubernasty.micahrl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ldap-account-manager
            port:
              number: 80
  tls:
    - secretName: ldap-account-manager-cert-backing-secret
      hosts:
        - accounts.kubernasty.micahrl.com
