kubernasty/manifests/crust/openldap/ingresses/phpldapadmin.http.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpldapadmin-in-http
  namespace: openldap
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https-mw@kubernetescrd

spec:
  rules:
  - host: phpldapadmin.kubernasty.micahrl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpldapadmin
            port:
              number: 80
