kubernasty/manifests/crust/openldap/ingresses/phpldapadmin.https.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpldapadmin-in
  namespace: openldap
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-issuer-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-clusteradmin-auth-mw@kubernetescrd

spec:
  rules:
  - host: phpldapadmin.kubernasty.micahrl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpldapadmin
            port:
              number: 80
  tls:
    - secretName: phpldapadmin-cert-backing-secret
      hosts:
        - phpldapadmin.kubernasty.micahrl.com
